--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -99,7 +99,7 @@
 
 
     <Button
-        android:id="@+id/LoginRegist"
+        android:id="@+id/viewprudocts"
         android:layout_width="221dp"
         android:layout_height="45dp"
         android:text="Register as client"
@@ -127,15 +127,15 @@
         app:layout_constraintVertical_bias="0.807" />
 
     <Button
-        android:id="@+id/MainSupplier"
+        android:id="@+id/pp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MainSupplier"
-        app:backgroundTint="#00FFFFFF"
+        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.144"
+        app:layout_constraintHorizontal_bias="0.084"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.945" />
+        app:layout_constraintVertical_bias="0.947" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
