--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -105,4 +105,24 @@
             android:id="@+id/action_Second5Fragment_to_First4Fragment"
             app:destination="@id/First4Fragment" />
     </fragment>
+    <fragment
+        android:id="@+id/First5Fragment"
+        android:name="com.example.gmach4u.First5Fragment"
+        android:label="@string/first_fragment_label"
+        tools:layout="@layout/fragment_first5">
+
+        <action
+            android:id="@+id/action_First5Fragment_to_Second6Fragment"
+            app:destination="@id/Second6Fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/Second6Fragment"
+        android:name="com.example.gmach4u.Second6Fragment"
+        android:label="@string/second_fragment_label"
+        tools:layout="@layout/fragment_second6">
+
+        <action
+            android:id="@+id/action_Second6Fragment_to_First5Fragment"
+            app:destination="@id/First5Fragment" />
+    </fragment>
 </navigation>
